bug in admin.html

--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../../js/adapter-settings.js"></script>
 <script type="text/javascript">
     systemDictionary = {
-        "PiFace Einstellungen": {
+        "PiFace adapter settings": {
             "de": "PiFace Einstellungen",
             "ru": "PiFace Настройки"
         },
