--- a/admin/index.html
+++ b/admin/index.html
@@ -46,7 +46,7 @@
     }
 </script>
 <div id="adapter-container">
-    <table><tr><td><img src="piface.png"></td><td><h3 class="translate">PiFace adapter settings</h3></td></tr></table>
+    <table><tr><td><img src="piface.png" width=200></td><td><h3 class="translate">PiFace adapter settings</h3></td></tr></table>
     <p>&nbsp;</p>
    
 </div>
